--- a/Informacion/alcance.html
+++ b/Informacion/alcance.html
@@ -33,6 +33,7 @@
       }
     }
   </script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
@@ -72,64 +73,76 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
-          1. Federalismo de Concertación
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La Ley C.U.R.A. se implementa bajo el principio de <strong>Federalismo de Concertación</strong>, alineado con los objetivos estratégicos del <strong>Pacto de Mayo</strong>. No es una imposición centralista, sino un acuerdo nacional donde la Nación provee la autopista tecnológica y las provincias conservan la gestión de su salud local, trabajando coordinadamente bajo la supervisión del <strong>Consejo de Mayo</strong>.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="100">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
+            1. Federalismo de Concertación
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La Ley C.U.R.A. se implementa bajo el principio de <strong>Federalismo de Concertación</strong>, alineado con los objetivos estratégicos del <strong>Pacto de Mayo</strong>. No es una imposición centralista, sino un acuerdo nacional donde la Nación provee la autopista tecnológica y las provincias conservan la gestión de su salud local.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-briefcase text-cura-accent text-2xl"></i>
-          2. Autoridad de Aplicación
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La conducción estratégica está a cargo de una <strong>Autoridad de Aplicación</strong> nacional, asistida por una <strong>Unidad Ejecutora</strong> técnica compuesta por especialistas de Salud, <strong>ARSAT</strong> e Innovación Pública. Esta estructura opera bajo el principio de <strong>Costo Cero</strong>, utilizando recursos humanos y tecnológicos preexistentes del Estado para evitar la creación de burocracia innecesaria.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="200">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-briefcase text-cura-accent text-2xl"></i>
+            2. Autoridad de Aplicación
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La conducción estratégica está a cargo de una <strong>Autoridad de Aplicación</strong> nacional, asistida por una <strong>Unidad Ejecutora</strong> técnica compuesta por especialistas de Salud, <strong>ARSAT</strong> e Innovación Pública. Esta estructura opera bajo el principio de <strong>Costo Cero</strong>.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-check-square-offset text-cura-accent text-2xl"></i>
-          3. Integración Obligatoria
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          El sistema es de cumplimiento obligatorio para organismos nacionales como el <strong>PAMI</strong>, Obras Sociales Nacionales y Entidades de Medicina Prepaga. Para las provincias, la adhesión se realiza mediante convenios federales que les permiten acceder a la infraestructura de <strong>C.U.R.A.</strong> como un "Software Público", eliminando costos de desarrollo y mantenimiento jurisdiccional.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="300">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-check-square-offset text-cura-accent text-2xl"></i>
+            3. Integración Obligatoria
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            El sistema es de cumplimiento obligatorio para organismos nacionales como el <strong>PAMI</strong>, Obras Sociales Nacionales y Entidades de Medicina Prepaga. Para las provincias, la adhesión se realiza mediante convenios federales que eliminan costos de mantenimiento.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-database text-cura-accent text-2xl"></i>
-          4. Titularidad de los Datos
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          El marco de gobernanza garantiza que, aunque la plataforma sea nacional, cada provincia mantiene la <strong>Titularidad Jurídica</strong> de los registros médicos generados en su territorio. La Nación actúa como el custodio tecnológico y garante de la ciberseguridad, pero la soberanía sobre la gestión del dato permanece en la jurisdicción de origen.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="400">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-database text-cura-accent text-2xl"></i>
+            4. Titularidad de los Datos
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            El marco de gobernanza garantiza que cada provincia mantiene la <strong>Titularidad Jurídica</strong> de los registros médicos generados en su territorio. La Nación actúa como el custodio tecnológico y garante de la ciberseguridad, pero la soberanía permanece en la jurisdicción de origen.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-users-three text-cura-accent text-2xl"></i>
-          5. Consejo Federal (COFESAD)
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Se jerarquiza la participación federal a través del <strong>COFESAD</strong>, donde los representantes de todas las jurisdicciones tienen voz y voto en la definición de los estándares de interoperabilidad. Esto asegura que el sistema evolucione respondiendo a las realidades geográficas y sanitarias de cada rincón del país.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="500">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-users-three text-cura-accent text-2xl"></i>
+            5. Consejo Federal (COFESAD)
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Se jerarquiza la participación federal a través del <strong>COFESAD</strong>, donde los representantes de todas las jurisdicciones tienen voz y voto en la definición de los estándares. Esto asegura que el sistema evolucione respondiendo a las realidades de cada rincón del país.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-eye text-cura-accent text-2xl"></i>
-          6. Gobernanza Transparente
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Incluye mecanismos de <strong>Transparencia Activa</strong>, con informes de gestión trimestrales y auditorías públicas. El sistema permite el control social, donde ciudadanos y organismos de control pueden verificar en tiempo real el cumplimiento de las metas de eficiencia presupuestaria y los estándares de seguridad establecidos por la ley.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-eye text-cura-accent text-2xl"></i>
+            6. Gobernanza Transparente
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Incluye mecanismos de <strong>Transparencia Activa</strong>, con informes de gestión trimestrales y auditorías públicas. El sistema permite el control social, permitiendo verificar en tiempo real el cumplimiento de las metas de eficiencia.
+          </p>
+        </div>
       </div>
 
     </div>
@@ -146,19 +159,35 @@
   <footer class="py-12 border-t border-white/10 text-center mt-auto">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
-<script>
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
-  });
 
-  function raf(time) {
-    lenis.raf(time);
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    // Inicializar Lenis (Scroll Suave)
+    const lenis = new Lenis({
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smoothWheel: true
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
     requestAnimationFrame(raf);
-  }
-  requestAnimationFrame(raf);
-</script>
+
+    // Inicializar AOS
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 50 
+      });
+
+      // Refrescar AOS cuando Lenis hace scroll para sincronizar disparadores
+      lenis.on('scroll', AOS.refresh);
+    });
+  </script>
 </body>
 </html>
