--- a/Informacion/faq.html
+++ b/Informacion/faq.html
@@ -33,6 +33,7 @@
       }
     }
   </script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
@@ -55,13 +56,13 @@
   </header>
 
   <main class="max-w-5xl mx-auto px-6 py-12">
-    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
+    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight" data-aos="fade-down">
       <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
       <span class="text-white font-semibold">Preguntas Frecuentes</span>
     </nav>
 
-    <div class="mb-12">
+    <div class="mb-12" data-aos="fade-up">
       <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Respuestas Directas
       </h1>
@@ -72,83 +73,97 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
-          ¿Cómo se garantiza que mis datos no sean alterados?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Implementamos una capa de <strong>Blockchain Gubernamental</strong>. Cada vez que se consulta o edita tu historial, se genera un registro inmutable. Esto permite verificar la integridad de la información en cualquier momento, con validez legal por 10 años.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="100">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
+            ¿Cómo se garantiza que mis datos no sean alterados?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Implementamos una capa de <strong>Blockchain Gubernamental</strong>. Cada vez que se consulta o edita tu historial, se genera un registro inmutable. Esto permite verificar la integridad de la información en cualquier momento, con validez legal por 10 años.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-shield-warning text-cura-accent text-2xl"></i>
-          ¿Si pierdo mi credencial, ven mi información?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          No. El sistema utiliza <strong>Acceso Segmentado</strong>. El farmacéutico solo ve recetas, mientras que emergencias solo ve datos críticos. Además, mediante <strong>CURA-ID</strong>, recibes una notificación inmediata en tu celular ante cualquier intento de acceso.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="200">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-shield-warning text-cura-accent text-2xl"></i>
+            ¿Si pierdo mi credencial, ven mi información?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            No. El sistema utiliza <strong>Acceso Segmentado</strong>. El farmacéutico solo ve recetas, mientras que emergencias solo ve datos críticos. Además, mediante <strong>CURA-ID</strong>, recibes una notificación inmediata en tu celular ante cualquier intento de acceso.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-robot text-cura-accent text-2xl"></i>
-          ¿La IA reemplazará al médico?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Nunca. La IA es una herramienta de <strong>Soporte Diagnóstico</strong>. Actúa como una "segunda opinión" científica de alta precisión, pero el profesional médico mantiene siempre la decisión final y la responsabilidad clínica.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="300">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-robot text-cura-accent text-2xl"></i>
+            ¿La IA reemplazará al médico?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Nunca. La IA es una herramienta de <strong>Soporte Diagnóstico</strong>. Actúa como una "segunda opinión" científica de alta precisión, pero el profesional médico mantiene siempre la decisión final y la responsabilidad clínica.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-bank text-cura-accent text-2xl"></i>
-          ¿De dónde sale el dinero para el sistema?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Se financia mediante <strong>Neutralidad Fiscal</strong>: se unifican las partidas informáticas dispersas y se reinvierte el 100% de los ahorros generados por la digitalización y la reducción de fraudes operativos, bajo auditoría de la <strong>SIGEN</strong>.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="400">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-bank text-cura-accent text-2xl"></i>
+            ¿De dónde sale el dinero para el sistema?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Se financia mediante <strong>Neutralidad Fiscal</strong>: se unifican las partidas informáticas dispersas y se reinvierte el 100% de los ahorros generados por la digitalización y la reducción de fraudes operativos, bajo auditoría de la <strong>SIGEN</strong>.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-wifi-slash text-cura-accent text-2xl"></i>
-          ¿Qué sucede si no hay conexión a internet?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          C.U.R.A. posee un <strong>Módulo de Resiliencia</strong>. Los datos se cargan de forma local y encriptada, sincronizándose automáticamente con la nube de <strong>ARSAT</strong> apenas se restablece la conexión (vía fibra o satélite).
-        </p>
+      <div data-aos="fade-up" data-aos-delay="500">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-wifi-slash text-cura-accent text-2xl"></i>
+            ¿Qué sucede si no hay conexión a internet?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            C.U.R.A. posee un <strong>Módulo de Resiliencia</strong>. Los datos se cargan de forma local y encriptada, sincronizándose automáticamente con la nube de <strong>ARSAT</strong> apenas se restablece la conexión (vía fibra o satélite).
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-buildings text-cura-accent text-2xl"></i>
-          ¿Es obligatorio para el sector privado?
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Sí. La ley es de <strong>Orden Público</strong>. Todos los actores (PAMI, Obras Sociales, Prepagas) deben interoperar con C.U.R.A. para que el ciudadano sea el verdadero dueño de su información y pueda atenderse en cualquier lugar del país.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-buildings text-cura-accent text-2xl"></i>
+            ¿Es obligatorio para el sector privado?
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Sí. La ley es de <strong>Orden Público</strong>. Todos los actores (PAMI, Obras Sociales, Prepagas) deben interoperar con C.U.R.A. para que el ciudadano sea el verdadero dueño de su información.
+          </p>
+        </div>
       </div>
 
-      <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
-          <i class="ph-bold ph-device-mobile text-cura-accent text-3xl"></i>
-          ¿Puedo ver mis datos desde el celular?
-        </h3>
-        <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
-          Sí. El acceso multiplataforma está garantizado a través de un <strong>Portal Web oficial</strong> o mediante la integración completa con la aplicación <strong>Mi Argentina</strong>. Esto permite que el ciudadano tenga su historial de salud siempre a mano, con la misma validez legal que un documento físico.
-        </p>
+      <div class="md:col-span-2" data-aos="zoom-in" data-aos-delay="700">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-2 hover:shadow-cura-accent/10">
+          <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
+            <i class="ph-bold ph-device-mobile text-cura-accent text-3xl"></i>
+            ¿Puedo ver mis datos desde el celular?
+          </h3>
+          <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
+            Sí. El acceso multiplataforma está garantizado a través de un <strong>Portal Web oficial</strong> o mediante la integración completa con la aplicación <strong>Mi Argentina</strong>. Esto permite que el ciudadano tenga su historial de salud siempre a mano, con la misma validez legal que un documento físico.
+          </p>
+        </div>
       </div>
 
     </div>
 
     <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
       <p class="text-cura-accentLight text-sm italic">Transparencia absoluta para el ciudadano.</p>
-      <a href="/Informacion/recursos" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+      <a href="/Informacion/recursos" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition group">
         Siguiente: Recursos Descargables
-        <i class="ph-bold ph-arrow-right"></i>
+        <i class="ph-bold ph-arrow-right transition-transform group-hover:translate-x-1"></i>
       </a>
     </div>
   </main>
@@ -156,19 +171,36 @@
   <footer class="py-12 border-t border-white/10 text-center mt-auto">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
-<script>
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
-  });
 
-  function raf(time) {
-    lenis.raf(time);
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    // Inicializar Lenis (Scroll Suave)
+    const lenis = new Lenis({
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smoothWheel: true
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
     requestAnimationFrame(raf);
-  }
-  requestAnimationFrame(raf);
-</script>
+
+    // Inicializar AOS
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 50,
+        anchorPlacement: 'top-bottom'
+      });
+
+      // Sincronizar AOS con Lenis
+      lenis.on('scroll', AOS.refresh);
+    });
+  </script>
 </body>
 </html>
